--- a/gamemaster-client/package.json
+++ b/gamemaster-client/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.18.0",
     "@nuxt/ui": "^3.3.3",
     "@nuxtjs/mdc": "^0.17.3",
     "@nuxtjs/tailwindcss": "^6.14.0",
